--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ const AIService = {
       throw new Error('API Key not set');
     }
     
-    // Using Gemini 2.0 Flash (fast & free)
-    const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`, {
+    // Using Gemini 1.5 Flash (stable free tier)
+    const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${apiKey}`, {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json',
